# blackhole

./: CMakeLists.txt  README.md  aabb.frag  blackhole.frag  blackhole_main.frag  boyer_lindquist.frag  kerr.frag  kerr_schild.frag  main.cpp  quad.vert  schwarzschild.frag
note/: blackhole.aux  blackhole.fdb_latexmk  blackhole.fls  blackhole.tex  blackhole.xdv
